fix navbar gap (responive)

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,13 +8,15 @@ header {
 .navbar {
   display: flex;
   align-items: center;
+  width: 100%;
 
   .navbar-ul {
     display: flex;
     align-items: center;
+    justify-content: space-around;
     list-style: none;
-    gap: 50px;
     height: 100%;
+    width: 100%;
 
     li {
       a {
