--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   max-width: 600px;
-  margin: 0 2rem;
+  margin: 0 5rem;
 
   .useful-links {
     display: flex;
@@ -21,7 +21,7 @@
       gap: 2.5rem;
 
       a {
-        transition: color .3s;
+        transition: color 0.3s;
 
         &:hover {
           color: var(--fg4);
@@ -34,3 +34,4 @@
     margin: 1rem 0;
   }
 }
+
